--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "brochure",
-  "version": "0.1.0",
+  "homepage": "http://Qpheliax.github.io/salonagneta",
+  "name": "salonagneta",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.1.0",
+    "pigeon-maps": "^0.19.5",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "clean": "gh-pages-clean"
   },
   "eslintConfig": {
     "extends": [
